--- a/assets/react/css/form.scss
+++ b/assets/react/css/form.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .form-container
 {
     &.card-form-container
@@ -5,6 +7,13 @@
         .form-control
         {
             flex: 1 0 20%;
+            vertical-align: middle;
+            align-items: center;
+
+            > div
+            {
+                width: 100%;
+            }
         }
     }
 }
