--- a/assets/react/css/form.scss
+++ b/assets/react/css/form.scss
@@ -1,23 +1,51 @@
-.form-container
-{
-    &.card-form-container
-    {
-        .form-control
-        {
+@import "./variables";
+
+#root .form-container {
+    &.card-form-container {
+        .form-control {
             flex: 1 0 20%;
             vertical-align: middle;
             align-items: center;
-            padding-top: 0.25rem;
+        }
+    }
 
-            > div
-            {
-                width: 100%;
-            }
+    .form-control {
+        padding-top: $base-unit;
 
-            &.align-items-baseline
-            {
-                align-items: baseline;
+        > div {
+            width: 100%;
+        }
+
+        &.align-items-baseline {
+            align-items: baseline;
+        }
+
+        label {
+            margin: 0;
+        }
+
+        &.full-width-label label {
+            width: 100%;
+        }
+
+        &.checkbox-form-control {
+            label > span {
+                padding: 0;
+                margin: 0;
             }
+        }
+
+        &.hover:hover label {
+            background-color: $gray-light;
+        }
+    }
+
+    .checkbox-icon {
+        height: 24px;
+        width: 24px;
+
+        &.highlight {
+            font-size: 1.2rem;
         }
     }
 }
